<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/login_layout"
    tools:context="com.nkbits.apps.enlist.LoginActivity">

    <include layout="@layout/content_login"/>

</android.support.design.widget.CoordinatorLayout>
